--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,15 @@
 
   <link href="build/main.css" rel="stylesheet">
 
+  <script type='text/javascript' src='https://x3dom.org/download/dev/x3dom-full.js'></script> 
+  <link rel='stylesheet' type='text/css' href='http://www.x3dom.org/download/x3dom.css'></link>
+  <style>
+            x3d
+            {
+                border:none;
+            }
+        </style>
+
 </head>
 <body>
 
